# status_page

./: README.md  package-lock.json  package.json
.github/workflows/: deploy-react-s3.yml
config/: config.json
src/: App.jsx
src/components/Banner/: Banner.css  Banner.jsx
src/components/Spinner/: Spinner.css  Spinner.jsx
src/components/StatusGrid/: StatusGrid.css  StatusGrid.jsx
src/components/StatusTable/: StatusTable.css
status_page_app/: index.html
status_page_app/config/: config.json
status_page_app/src/: App.jsx  index.css
status_page_app/src/components/Banner/: Banner.css  Banner.jsx
status_page_app/src/components/Icon/: Icon.jsx
status_page_app/src/components/Legend/: Legend.css  Legend.jsx
status_page_app/src/components/StatusTable/: StatusTable.jsx
terraform/: README.md  main.tf  outputs.tf  variables.tf  vars.tfvars  versions.tf
terraform/status_lambda/: build_lambda.sh
terraform/status_lambda/src/: pyproject.toml  status_lambda.py
